--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "redis": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
