--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "amqplib": "^0.9.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
+    "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
     "morgan": "^1.10.0",
